Actualizar style.css avoid overlap v2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,7 +484,7 @@ footer {
     }
   }
   section {
-    margin-top: 50px;
+   /* margin-top: 50px;*/
   }
 
   header ul {
